--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
+    "start:dev": "webpack-dev-server",
     "build": "webpack"
   },
   "repository": {
@@ -19,11 +20,16 @@
   },
   "homepage": "https://github.com/vic-smith/food-festival#readme",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.0",
+    "file-loader": "^6.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "image-webpack-loader": "^8.0.1",
     "jquery": "^3.6.0",
     "save": "^2.4.0"
   }
